--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,6 +43,7 @@
         android:padding="10dp">
 
         <EditText
+            android:id="@+id/nameSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -55,6 +56,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/emailSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -67,6 +69,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/numberSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -79,6 +82,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/cinSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -91,6 +95,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/passwordSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -103,6 +108,7 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnSignUp"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -111,6 +117,7 @@
             android:text="Sign Up"
             app:cornerRadius="20sp" />
         <TextView
+            android:id="@+id/goToSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You have an account !"
@@ -119,6 +126,8 @@
             android:layout_gravity="center"
             android:textColor="@color/colorApp"
             android:padding="10dp" />
+
+
 
     </LinearLayout>
 
