--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -54,6 +54,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"/>
             <EditText
+                android:id="@+id/emailForget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="exemple@gmail.com"
@@ -64,6 +65,7 @@
                 android:layout_marginTop="10sp"
                 android:layout_marginStart="12sp"/>
             <Button
+                android:id="@+id/resetPassword"
                 android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
