--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,17 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:id="@+id/drawer_layout_home">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="logOut"
-        android:id="@+id/logOut"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:theme="@style/navigationTheme"
+        app:headerLayout="@layout/header_menu"
+        app:menu="@menu/main_menu"
+        app:itemIconSize="30sp"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/icon_home"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_menu"
+            android:layout_margin="15sp"
+            app:tint="@color/colorApp"
+            />
+
+        <EditText
+            android:id="@+id/device_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Name Device "
+            android:inputType="text"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:layout_marginLeft="20sp"
+            android:padding="16sp"
+
+            />
+        <EditText
+            android:id="@+id/device_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Value "
+            android:inputType="number"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:layout_marginLeft="20sp"
+            android:padding="16sp"
+            android:layout_marginTop="10sp"
+
+            />
+
+        <Button
+            android:id="@+id/add_device"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
+            android:text="add Device"
+            android:backgroundTint="@color/colorApp"
+            app:cornerRadius="20sp"
+            />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listDevices"/>
+
+    </LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
