--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="navigationTheme">
+        <item name="colorPrimary"> @color/colorApp </item>
+        <item name="colorControlHighlight"> @color/black </item>
+    </style>
 </resources>
